--- a/TrabalhoBanco/WebContent/ComprovantePagamento.xhtml
+++ b/TrabalhoBanco/WebContent/ComprovantePagamento.xhtml
@@ -50,7 +50,7 @@
 				<button type="submit" class="btn btn-default">Buscar</button>
 			</form>
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="Login.xhtml">Login</a></li>
+				<li><a href="Login.xhtml">Login </a></li>
 			</ul>
 		</div>
 	</div>
@@ -58,4 +58,9 @@
 <h:body>
 	<h:form acceptcharset="ISO-8859-1">
 		<fieldset>
+		</fieldset>
+		</h:form>
+		</h:body>
+		</html>
+		
 		
