--- a/TrabalhoBanco/WebContent/Saldo.xhtml
+++ b/TrabalhoBanco/WebContent/Saldo.xhtml
@@ -55,18 +55,17 @@
 </nav>
 <h:form acceptcharset="ISO-8859-1">
 <fieldset>
-			<h1>Inserir saldo para o cliente</h1>
-			<h3>Saldo default: R$50,00</h3>
+			<h1>Saldo do Cliente</h1>
 			<h:selectOneMenu value="#{mSaldoBean.idCad}">
 			<f:selectItem itemLabel="Selecione o cadastro" itemValue="0"></f:selectItem>
 			<f:selectItems value="#{mCadastroBean.cadastros}" var="cadastro" itemLabel="#{cadastro.nome}" itemValue="#{cadastro.idCad}"></f:selectItems>
 			</h:selectOneMenu>
 			<br/>
 			<br/> 
-			<p:inputText id="saldo" required="true" pt:placeholder="Inserir saldo default" value="#{mSaldoBean.saldo.saldo}"></p:inputText>
+			<h:outputText value="• Saldo: "/> 
+			<h:outputText id="saldo"  value="#{mSaldoBean.saldo.saldo}"></h:outputText>
 			<br/> 
 			<br/> 
-			<p:commandButton value="Adicionar Saldo" action="#{mSaldoBean.gravarSaldo(mSaldoBean.saldo)}"></p:commandButton>
 		</fieldset>
 	</h:form>
 </h:body>
