--- a/TrabalhoBanco/WebContent/Administrador.xhtml
+++ b/TrabalhoBanco/WebContent/Administrador.xhtml
@@ -64,32 +64,35 @@
 		<nav>
 	<p:menubar>
 		<p:submenu label="Alterar">
-			<p:menuitem value="Cliente" url="BuscarCliente.xhtml"/>
-			<p:menuitem value="Endereços" url="#"/>
-			<p:menuitem value="Cartões" url="#"/>
-			<p:menuitem value="CPF/CNPJ" url="#"/>
-			<p:menuitem value="Agências" url="#"/>
+			<p:menuitem value="Cliente" url="AlterarCliente.xhtml"/>
+			<p:menuitem value="Endereços" url="AlterarEndereco.xhtml"/>
+			<p:menuitem value="Cartões" url="AlterarCartao.xhtml"/>
+			<p:menuitem value="Pessoa" url="AlterarPessoa.xhtml"/>
+			<p:menuitem value="Agências" url="AlterarAgencia.xhtml"/>
+			<p:menuitem value="Saldo" url="AlterarSaldo.xhtml"/>
 		</p:submenu>
-		<p:submenu label="Buscar">
-			<p:menuitem value="Cliente" url="#"/>
-			<p:menuitem value="Endereços" url="#"/>
-			<p:menuitem value="Cartões" url="#"/>
-			<p:menuitem value="CPF/CNPJ" url="#"/>
-			<p:menuitem value="Agências" url="#"/>
+		<p:submenu label="Listar">
+			<p:menuitem value="Cliente" url="ListarCliente.xhtml"/>
+			<p:menuitem value="Endereços" url="ListarEndereco.xhtml"/>
+			<p:menuitem value="Cartões" url="ListarCartao.xhtml"/>
+			<p:menuitem value="Pessoa" url="ListarPessoa.xhtml"/>
+			<p:menuitem value="Agências" url="ListarAgencia.xhtml"/>
+			<p:menuitem value="Saldo" url="#"/>
 		</p:submenu>
 		<p:submenu label="Deletar">
-			<p:menuitem value="Cliente" url="#"/>
-			<p:menuitem value="Endereços" url="#"/>
-			<p:menuitem value="Cartões" url="#"/>
-			<p:menuitem value="CPF/CNPJ" url="#"/>
-			<p:menuitem value="Agências" url="#"/>
+			<p:menuitem value="Cliente" url="DeletarCliente.xhtml"/>
+			<p:menuitem value="Endereços" url="DeletarEndereco.xhtml"/>
+			<p:menuitem value="Cartões" url="DeletarCartao.xhtml"/>
+			<p:menuitem value="Pessoa" url="DeletarPessoa.xhtml"/>
+			<p:menuitem value="Agências" url="DeletarAgencia.xhtml"/>
+			<p:menuitem value="Saldo" url="#"/>
 		</p:submenu>
 		<p:submenu label="Cadastrar">
 		<p:menuitem value="Agências" url="Agencia.xhtml"></p:menuitem>
 		</p:submenu>
 		<p:submenu label="Inserir Dados">
-		<p:menuitem value="Saldo" url="#"></p:menuitem>
-		<p:menuitem value="Conta" url="#"></p:menuitem>
+		<p:menuitem value="Saldo" url="InserirSaldo.xhtml"></p:menuitem>
+		<p:menuitem value="Conta" url="InserirConta.xhtml"></p:menuitem>
 		</p:submenu>
 	</p:menubar>
 	</nav>	
