--- a/TrabalhoBanco/WebContent/InserirConta.xhtml
+++ b/TrabalhoBanco/WebContent/InserirConta.xhtml
@@ -57,15 +57,18 @@
 	</div>
 </nav>
 <h:form acceptcharset="ISO-8859-1">
-			<h:outputText value="• Nome da Agência: "/>
-			<p:inputText id="nome" required="true" pt:placeholder="Digite o nome da agência" value="#{mAgenciaBean.agencia.nome}"></p:inputText>
+<h1>Inserir conta para o cliente</h1>
+			<h:selectOneMenu value="#{mCartaoBean.idCad}">
+			<f:selectItem itemLabel="Selecione o cadastro" itemValue="0"></f:selectItem>
+			<f:selectItems value="#{mCadastroBean.cadastros}" var="cadastro" itemLabel="#{cadastro.nome}" itemValue="#{cadastro.idCad}"></f:selectItems>
+			</h:selectOneMenu>
 			<br/> 
+			<br/>
+			<h:outputText value="• Conta: "/>
+			<p:inputText id="conta" pt:placeholder="Digite a conta" value="#{mContaBean.conta.conta}"></p:inputText>
+			<br/>
 			<br/> 
-			<h:outputText value="• Agência: "/>
-			<p:inputText id="agencia" required="true" pt:placeholder="Digite a agência" value="#{mAgenciaBean.agencia.agencia}"></p:inputText>
-			<br/> 
-			<br/> 
-			<p:commandButton value="Gravar" action="#{mAgenciaBean.gravarAgencia(mAgenciaBean.agencia)}"></p:commandButton>
+			<h:commandButton value="Inserir" action="#{mContaBean.gravarConta(mContaBean.conta)}"></h:commandButton>
 </h:form>
 </body>
 </html>
