--- a/TrabalhoBanco/WebContent/ListarCliente.xhtml
+++ b/TrabalhoBanco/WebContent/ListarCliente.xhtml
@@ -73,13 +73,12 @@
 	<p:column><f:facet name="header">RG</f:facet>
 	<h:outputText value="#{cadastroCliente.rg}"></h:outputText>
 	</p:column>
-	<br/>
-	<br/>
+	<p:column><f:facet name="header">Agencia</f:facet>
+	<h:outputText value="#{cadastroCliente.agencia.agencia}"></h:outputText>
+	</p:column>
 	<p:column><f:facet name="header">Alterar</f:facet>
 	<p:commandLink  value="Alterar" action="#{mCadastroBean.enviarDadosParaAlterar(cadastroCliente)}"></p:commandLink>
 	</p:column>
-	<br/>
-	<br/>
 	<p:column><f:facet name="header">Retornar</f:facet>
 	<p:commandLink value="Retornar" action="Administrador.xhtml?faces-redirect=true"></p:commandLink>
 	</p:column>
