deposito emprestimo pagamento poupança transferencia saldo

--- a/TrabalhoBanco/WebContent/ComprovantePagamento.xhtml
+++ b/TrabalhoBanco/WebContent/ComprovantePagamento.xhtml
@@ -58,6 +58,12 @@
 <h:body>
 	<h:form acceptcharset="ISO-8859-1">
 		<fieldset>
+		<h1>Cadastrar Usúario</h1>
+			<b:icon name="glyphicon-user"/> 
+			<h:outputText value="Cliente: "/>
+			<p:inputText id="Cliente" required="true" pt:placeholder="Digite a agencia" value="#{mCadastroBean.cadastro.agencia}"></p:inputText>
+			<br/> 
+			<br/> 
 		</fieldset>
 		</h:form>
 		</h:body>
