--- a/TrabalhoBanco/WebContent/Administrador.xhtml
+++ b/TrabalhoBanco/WebContent/Administrador.xhtml
@@ -63,28 +63,12 @@
 		<h1>• Ir para</h1>
 		<nav>
 	<p:menubar>
-		<p:submenu label="Alterar">
-			<p:menuitem value="Cliente" url="AlterarCliente.xhtml"/>
-			<p:menuitem value="Endereços" url="AlterarEndereco.xhtml"/>
-			<p:menuitem value="Cartões" url="AlterarCartao.xhtml"/>
-			<p:menuitem value="Pessoa" url="AlterarPessoa.xhtml"/>
-			<p:menuitem value="Agências" url="AlterarAgencia.xhtml"/>
-			<p:menuitem value="Saldo" url="AlterarSaldo.xhtml"/>
-		</p:submenu>
-		<p:submenu label="Listar">
+		<p:submenu label="Listas">
 			<p:menuitem value="Cliente" url="ListarCliente.xhtml"/>
 			<p:menuitem value="Endereços" url="ListarEndereco.xhtml"/>
 			<p:menuitem value="Cartões" url="ListarCartao.xhtml"/>
 			<p:menuitem value="Pessoa" url="ListarPessoa.xhtml"/>
 			<p:menuitem value="Agências" url="ListarAgencia.xhtml"/>
-			<p:menuitem value="Saldo" url="#"/>
-		</p:submenu>
-		<p:submenu label="Deletar">
-			<p:menuitem value="Cliente" url="DeletarCliente.xhtml"/>
-			<p:menuitem value="Endereços" url="DeletarEndereco.xhtml"/>
-			<p:menuitem value="Cartões" url="DeletarCartao.xhtml"/>
-			<p:menuitem value="Pessoa" url="DeletarPessoa.xhtml"/>
-			<p:menuitem value="Agências" url="DeletarAgencia.xhtml"/>
 			<p:menuitem value="Saldo" url="#"/>
 		</p:submenu>
 		<p:submenu label="Cadastrar">
