--- a/TrabalhoBanco/WebContent/AlterarPessoa.xhtml
+++ b/TrabalhoBanco/WebContent/AlterarPessoa.xhtml
@@ -53,13 +53,29 @@
     </div>
   </div>
 </nav>
-	<h:form acceptcharset="ISO-8859-1">
-	<b:icon name="glyphicon-search"/> 
-	<p:inputText id="clientes" pt:placeholder="Buscar cliente"></p:inputText>
+	<h:form acceptcharset="ISO-8859-1" id="Cadastro">
+	<h:panelGrid columns="1">
+	<h:inputHidden value="#{mPessoaBean.pessoa.idPes}"></h:inputHidden>
+	<p:outputLabel value="Você é uma pessoa: "></p:outputLabel>
+	<p:selectOneRadio itemValue="Pessoa" required="true" value="#{mPessoaBean.pessoa.pessoa}">
+			<f:selectItem itemValue="Juridica" itemLabel="Juridica" />
+			<f:selectItem itemValue="Fisica" itemLabel="Fisica" />
+	</p:selectOneRadio>
 	<br/>
 	<br/>
-	<p:commandButton value="Buscar"></p:commandButton>
+	<p:outputLabel value="Juridica: "></p:outputLabel>
+	<p:inputText pt:placeholder="Digite o CNPJ" value="#{mPessoaBean.pessoa.juridica}"></p:inputText>
+	<br/>
+	<br/>
+	<p:outputLabel value="Fisica: "></p:outputLabel>
+	<p:inputText pt:placeholder="Digite o CPF" value="#{mPessoaBean.pessoa.fisica}"></p:inputText>
+	<br/>
+	<br/>
+	<p:commandButton value="Alterar" action="#{mPessoaBean.alterarPessoa(mPessoaBean.pessoa)}"></p:commandButton>
+	<br/>
+	<br/>
 	<p:commandButton value="Retornar" action="Administrador.xhtml?faces-redirect=true"></p:commandButton>
+	</h:panelGrid>
 	</h:form>
 </body>
 </html>
