--- a/TrabalhoBanco/WebContent/Transferencia.xhtml
+++ b/TrabalhoBanco/WebContent/Transferencia.xhtml
@@ -59,7 +59,7 @@
 	<h:form acceptcharset="ISO-8859-1">
 		<fieldset>
 		
-			<h1>Cadastrar Usúario</h1>
+			<h1>Tranferencia </h1>
 			<b:icon name="glyphicon-user"/> 
 			<h:outputText value=" Agencia: "/>
 			<p:inputText id="Agencia" required="true" pt:placeholder="Digite a agencia" value="#{mCadastroBean.cadastro.agencia}"></p:inputText>
