--- a/TrabalhoBanco/WebContent/AlterarCliente.xhtml
+++ b/TrabalhoBanco/WebContent/AlterarCliente.xhtml
@@ -96,7 +96,7 @@
 	<p:commandButton value="Alterar" action="#{mCadastroBean.alterarCadastro(mCadastroBean.cadastro)}"></p:commandButton>
 	<br/>
 	<br/>
-	<p:commandButton value="Retornar" action="Administrador.xhtml?faces-redirect=true"></p:commandButton>
+	<p:commandButton value="Retornar" action="ListarCliente.xhtml?faces-redirect=true"></p:commandButton>
 	</h:panelGrid>
 	</h:form>
 </body>
