--- a/TrabalhoBanco/WebContent/ListarPessoa.xhtml
+++ b/TrabalhoBanco/WebContent/ListarPessoa.xhtml
@@ -70,6 +70,9 @@
 	<p:column><f:facet name="header">Alterar</f:facet>
 	<p:commandLink  value="Alterar" action="#{mPessoaBean.enviarDadosParaAlterar(cadastroPessoa)}"></p:commandLink>
 	</p:column>
+	<p:column><f:facet name="header">Remover</f:facet>
+	<p:commandLink  value="Alterar" action="#{mCadastroBean.enviarDadosParaAlterar(cadastroCliente)}"></p:commandLink>
+	</p:column>
 	<p:column><f:facet name="header">Retornar</f:facet>
 	<p:commandLink value="Retornar" action="Administrador.xhtml?faces-redirect=true"></p:commandLink>
 	</p:column>
