--- a/TrabalhoBanco/WebContent/Administrador.xhtml
+++ b/TrabalhoBanco/WebContent/Administrador.xhtml
@@ -30,7 +30,7 @@
 			id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
 				<li><a href="#">Informações</a></li>
-				<li><a href="#">Cadastro</a></li>
+				<li><a href="CadastroCliente.xhtml">Cadastro</a></li>
 				<li class="dropdown"><a href="#" class="dropdown-toggle"
 					data-toggle="dropdown" role="button" aria-expanded="false">Ajuda
 						<span class="caret"></span>
@@ -69,7 +69,7 @@
 			<p:menuitem value="Cartões" url="ListarCartao.xhtml"/>
 			<p:menuitem value="Pessoa" url="ListarPessoa.xhtml"/>
 			<p:menuitem value="Agências" url="ListarAgencia.xhtml"/>
-			<p:menuitem value="Saldo" url="#"/>
+			<p:menuitem value="Saldo" url="ListarSaldo.xhtml"/>
 		</p:submenu>
 		<p:submenu label="Cadastrar">
 		<p:menuitem value="Agências" url="Agencia.xhtml"></p:menuitem>
