--- a/TrabalhoBanco/WebContent/Agencia.xhtml
+++ b/TrabalhoBanco/WebContent/Agencia.xhtml
@@ -29,7 +29,7 @@
 			id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
 				<li><a href="#">Informações</a></li>
-				<li><a href="#">Cadastro</a></li>
+				<li><a href="CadastroCliente.xhtml">Cadastro</a></li>
 				<li class="dropdown"><a href="#" class="dropdown-toggle"
 					data-toggle="dropdown" role="button" aria-expanded="false">Ajuda
 						<span class="caret"></span>
