--- a/TrabalhoBanco/WebContent/AlterarPessoa.xhtml
+++ b/TrabalhoBanco/WebContent/AlterarPessoa.xhtml
@@ -27,7 +27,7 @@
  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="#">Informações</a></li>
-        <li><a href="CadastroCliente.xhtml">Cadastro</a></li>
+       <li><a href="CadastroCliente.xhtml">Cadastro</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Ajuda <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -53,7 +53,7 @@
     </div>
   </div>
 </nav>
-	<h:form acceptcharset="ISO-8859-1" id="Cadastro">
+	<h:form acceptcharset="ISO-8859-1" id="Pessoa">
 	<h:panelGrid columns="1">
 	<h:inputHidden value="#{mPessoaBean.pessoa.idPes}"></h:inputHidden>
 	<p:outputLabel value="Você é uma pessoa: "></p:outputLabel>
@@ -74,7 +74,7 @@
 	<p:commandButton value="Alterar" action="#{mPessoaBean.alterarPessoa(mPessoaBean.pessoa)}"></p:commandButton>
 	<br/>
 	<br/>
-	<p:commandButton value="Retornar" action="Administrador.xhtml?faces-redirect=true"></p:commandButton>
+	<p:commandButton value="Retornar" action="ListarPessoa.xhtml?faces-redirect=true"></p:commandButton>
 	</h:panelGrid>
 	</h:form>
 </body>
