--- a/TrabalhoBanco/WebContent/ListarEndereco.xhtml
+++ b/TrabalhoBanco/WebContent/ListarEndereco.xhtml
@@ -79,6 +79,9 @@
 	<p:column><f:facet name="header">Alterar</f:facet>
 	<p:commandLink  value="Alterar" action="#{mEnderecoBean.enviarDadosParaAlterar(cadastroEndereco)}"></p:commandLink>
 	</p:column>
+	<p:column><f:facet name="header">Remover</f:facet>
+	<p:commandLink  value="Remover" action="#{mEnderecoBean.removerEndereco(cadastroEndereco)}"></p:commandLink>
+	</p:column>
 	<p:column><f:facet name="header">Retornar</f:facet>
 	<p:commandLink value="Retornar" action="Administrador.xhtml?faces-redirect=true"></p:commandLink>
 	</p:column>
