--- a/TrabalhoBanco/WebContent/ListarPessoa.xhtml
+++ b/TrabalhoBanco/WebContent/ListarPessoa.xhtml
@@ -71,7 +71,7 @@
 	<p:commandLink  value="Alterar" action="#{mPessoaBean.enviarDadosParaAlterar(cadastroPessoa)}"></p:commandLink>
 	</p:column>
 	<p:column><f:facet name="header">Remover</f:facet>
-	<p:commandLink  value="Alterar" action="#{mCadastroBean.enviarDadosParaAlterar(cadastroCliente)}"></p:commandLink>
+	<p:commandLink  value="Remover" action="#{mPessoaBean.removerPessoa(cadastroPessoa)}"></p:commandLink>
 	</p:column>
 	<p:column><f:facet name="header">Retornar</f:facet>
 	<p:commandLink value="Retornar" action="Administrador.xhtml?faces-redirect=true"></p:commandLink>
