--- a/TrabalhoBanco/WebContent/ListarSaldo.xhtml
+++ b/TrabalhoBanco/WebContent/ListarSaldo.xhtml
@@ -53,25 +53,22 @@
     </div>
   </div>
 </nav>
-	<h:form acceptcharset="ISO-8859-1" id="Cartao">
-	<p:dataTable  value="#{mCartaoBean.cartoes}" var="cadastroCartao">
-	<p:column><f:facet name="header">Nome do Cliente</f:facet>
-	<h:outputText value="#{cadastroCartao.cadastro.nome}"></h:outputText>
+	<h:form acceptcharset="ISO-8859-1" id="Cadastro">
+	<p:dataTable  value="#{mCadastroBean.cadastros}" var="cadastroCliente" >
+	<p:column><f:facet name="header">Nome</f:facet>
+	<h:outputText value="#{cadastroCliente.nome}"></h:outputText>
 	</p:column>
-	<p:column><f:facet name="header">Renda</f:facet>
-	<h:outputText value="#{cadastroCartao.renda}"></h:outputText>
-	</p:column>
-	<p:column><f:facet name="header">Tipo cartão</f:facet>
-	<h:outputText value="#{cadastroCartao.tipoCartao}"></h:outputText>
+	<p:column><f:facet name="header">Saldo</f:facet>
+	<h:outputText value="#{cadastroCliente.saldo}"></h:outputText>
 	</p:column>
 	<p:column><f:facet name="header">Alterar</f:facet>
-	<p:commandLink  value="Alterar" action="#{mCartaoBean.enviarDadosParaAlterar(cadastroCartao)}"></p:commandLink>
+	<p:commandLink  value="Alterar" action="#{mCadastroBean.enviarDadosParaAlterar2(cadastroCliente)}"></p:commandLink>
 	</p:column>
 	<p:column><f:facet name="header">Remover</f:facet>
-	<p:commandLink  value="Remover" action="#{mCartaoBean.removerCartao(cadastroCartao)}"></p:commandLink>
+	<p:commandLink  value="Remover" action="#{mCadastroBean.removerCadastro(cadastroCliente)}"></p:commandLink>
 	</p:column>
 	<p:column><f:facet name="header">Retornar</f:facet>
-	<p:commandLink  value="Retornar" action="Administrador.xhtml?faces-redirect=true"></p:commandLink>
+	<p:commandLink value="Retornar" action="Administrador.xhtml?faces-redirect=true"></p:commandLink>
 	</p:column>
 	</p:dataTable>
 	</h:form>
