--- a/TrabalhoBanco/WebContent/Pessoa.xhtml
+++ b/TrabalhoBanco/WebContent/Pessoa.xhtml
@@ -60,13 +60,9 @@
 		<fieldset>
 		<h1>Cadastrar CPF/CNPJ</h1>
 			<h:selectOneMenu value="#{mPessoaBean.idCad}">
-			<f:selectItem itemLabel=" -- Selecione -- " itemValue="0">
-			</f:selectItem>
-			<f:selectItems value="#{mCadastroBean.cadastros}"
-				var="cadastro" itemLabel="#{cadastro.nome}" 
-				itemValue="#{cadastro.idCad}">
-			</f:selectItems>
-			</h:selectOneMenu>
+			<f:selectItem itemLabel="Selecione o cadastro" itemValue="0"></f:selectItem>
+			<f:selectItems value="#{mCadastroBean.cadastros}" var="cadastro" itemLabel="#{cadastro.nome}" itemValue="#{cadastro.idCad}"></f:selectItems>
+		</h:selectOneMenu>
 			<br/> 
 			<br/>
 			<h:outputText value="• Você é uma pessoa: "/> 
