--- a/TrabalhoBanco/WebContent/Saldo.xhtml
+++ b/TrabalhoBanco/WebContent/Saldo.xhtml
@@ -53,20 +53,21 @@
 		</div>
 	</div>
 </nav>
-<h:form acceptcharset="ISO-8859-1">
-<fieldset>
-			<h1>Saldo do Cliente</h1>
-			<h:selectOneMenu value="#{mSaldoBean.idCad}">
-			<f:selectItem itemLabel="Selecione o cadastro" itemValue="0"></f:selectItem>
-			<f:selectItems value="#{mCadastroBean.cadastros}" var="cadastro" itemLabel="#{cadastro.nome}" itemValue="#{cadastro.idCad}"></f:selectItems>
-			</h:selectOneMenu>
-			<br/>
-			<br/> 
-			<h:outputText value="• Saldo: "/> 
-			<h:outputText id="saldo"  value="#{mSaldoBean.saldo.saldo}"></h:outputText>
-			<br/> 
-			<br/> 
-		</fieldset>
+	<h:form acceptcharset="ISO-8859-1" id="Cliente">
+		<h:panelGrid columns="1">
+		<h:inputHidden value="#{mCadastroBean.cadastro.idCad}"></h:inputHidden>
+		<p:outputLabel style="font-size: 25px;" value="Nome: "></p:outputLabel>
+		<p:outputLabel style="font-size: 20px;" value="#{mCadastroBean.cadastro.nome}"></p:outputLabel>
+		<br/>
+		<br/>
+		<p:outputLabel style="font-size: 25px;" value="Saldo: "></p:outputLabel>
+		<p:outputLabel style="font-size: 20px;" value="R$#{mCadastroBean.cadastro.saldo}"></p:outputLabel>
+		<br/>
+		<p:column><f:facet name="header">Retornar</f:facet>
+		<p:commandButton value="Retornar" action="AreaCliente.xhtml?faces-redirect=true"></p:commandButton>
+		</p:column>
+		<br/>
+	</h:panelGrid>
 	</h:form>
 </h:body>
 </html>
