--- a/TrabalhoBanco/WebContent/AreaCliente.xhtml
+++ b/TrabalhoBanco/WebContent/AreaCliente.xhtml
@@ -81,6 +81,10 @@
 	<br/>
 	<p:outputLabel value="Agencia: "></p:outputLabel>
 	<p:outputLabel value="#{mCadastroBean.cadastro.agencia.agencia}"></p:outputLabel>
+	<br/>
+	<br/>
+	<p:outputLabel value="Conta: "></p:outputLabel>
+	<p:outputLabel value="#{mCadastroBean.cadastro.conta}"></p:outputLabel>
 	</h:panelGrid>			
 			<h1>• Ir para</h1>
 			<br/>
